feat: Update mappers to use constructor injection strategy and refactor URL handling in tests